# Hackathon-Book

./: .gitignore  CLAUDE.md  WORKFLOW.md  package.json  tasks.md  vercel.json
.claude/: README.md  setting.local.json  settings.local.json
.claude/agents/: auth-architect.md  form-builder.md  security-auditor.md  ui-designer.md
.claude/commands/: sp.fix.md  sp.git.commit_pr.md  sp.phr.md  sp.plan.md
.specify/memory/: constitution.md
api/auth/: [...all].ts
api/lib/: auth.ts
backend/: .gitignore  README.md  pyproject.toml  test_api.py  verification.py
backend-2/: Dockerfile  requirements.txt
backend/.claude/: settings.local.json
backend/.specify/memory/: constitution.md
backend/app/: __init__.py  db.py  main.py  rag.py
backend/history/prompts/constitution/: 1-update-project-constitution.constitution.prompt.md
backend/history/prompts/rag-chatbot-backend/: 0002-specify.prompt.md  0003-plan.prompt.md  0006-implement-testing.prompt.md  0008-git-commit-pr.prompt.md
backend/scripts/: index_content.py
backend/specs/1-rag-chatbot-backend/: plan.md  tasks.md
backend/specs/1-rag-chatbot-backend/checklists/: requirements.md
backend/tests/: test_rag.py
my-website/: docusaurus.config.ts  package-lock.json  sidebars.ts
my-website/docs/: assessments.md  learning-outcomes.md
specs/001-ai-native-dev-paper/: spec.md
specs/001-docusaurus-plan/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
website/: .env  .gitignore  auth-server.js  docusaurus.config.ts  package-lock.json  package.json  server.js  tsconfig.json
(+199 files in other folders)
